codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_runtime_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort


› 1. GPT-6 Sol (Global) (current)      Previous generation workhorse model.
  2. GPT-6-Astra (Global)              Frontier intelligence for the most demanding work.
  3. GPT-6 Luna (Global)               Fast and affordable model for easier tasks.
  4. GPT-5.6 Sol (Global)              Older generation workhorse model.
  5. GPT-5.6 Terra (Global)            Older balanced model for straightforward work.
  6. GPT-5.6 Luna (Global)             Older fast and efficient model.
  7. GPT-6 Sol (US cross-region)       Previous generation workhorse model.
  8. GPT-6-Astra (US cross-region)     Frontier intelligence for the most demanding work.
↓
  enter select · esc back
