codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__btw_footer_override.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"   BTW from main thread · Esc to return                      100% context left  "
